# quantum_placeholder

neurons/: miner.py  validator.py
peaked-circuit-creation/: .gitmodules  README.md  main.py  pyproject.toml
peaked-circuit-creation/lib/: circuit.py  circuit_gen.py  verification.py
peaked-circuit-creation/lib/decompose/: __init__.py  cnots.py  ising.py
peaked-circuit-creation/prototyping/: su4_grad.py  su4_grad_cnots.txt  su4_grad_ising.txt
qubittensor/: protocol.py
qubittensor/base/: miner.py  neuron.py  validator.py
qubittensor/hashing/: sign_message.py
qubittensor/validator/: forward.py
